# synesthesia-core

./: .gitignore
synesthesia-core/: .cache  .gitignore  Cargo.toml  Dockerfile  README.md  REVIEW.md  REVIEW_RUST_INTEGRATION.md  check_qdrant.py  debug_qdrant.py  docker-compose.yml  main.py  pyproject.toml  tsconfig.json  verify_phase2.py  verify_spotify_data.py  verify_system.py
synesthesia-core/.agent/workflows/: verify_phase_2.md
synesthesia-core/.github/workflow/: ci.yml
synesthesia-core/frontend/: package-lock.json  package.json  tailwind.config.ts  types.ts
synesthesia-core/frontend/app/: .page.tsx.swp  globals.css  layout.tsx  page.tsx
synesthesia-core/frontend/components/: AudioSensor.tsx  HoloScreen.tsx  Knobs.tsx  LabWorkbench.tsx  MissionLog.tsx  SearchBar.tsx  SynthRack.tsx  TerminalInput.tsx  Visualizer.tsx  Waveform.tsx
synesthesia-core/frontend/hooks/: useSynesthesia.ts
synesthesia-core/frontend/public/: config.json
synesthesia-core/frontend/services/: synesthesiaApi.ts
synesthesia-core/frontend/tests/: App.test.tsx
synesthesia-core/python/synesthesia/: __init__.py  api.py  concepts.json  ingest.py  spotify.py  vector.py
synesthesia-core/scripts/: cleanup_db.py  ingest.py  verify_integrity.py
synesthesia-core/services/: ark.py  controller.py  dsp.py  navigation.py  spotify.py  vector.py
synesthesia-core/src/: audio.rs  lib.rs  window.rs
synesthesia-core/tests/: conftest.py  test_api.py  test_spotify.py  test_system.py  test_tui_startup.py  test_vector_engine.py
synesthesia-core/ui/: app.py  styles.tcss
(+5 files in other folders)
